[package]
name = "shrimp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# std::error::Error implemenation
# for errors.
thiserror = "*"
# Prettier error messages
anyhow = "*"
# Command line arg parsing.
clap = "3.0.0-beta.5"