[package]
name = "shrimp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# std::error::Error implemenation
# for errors.
thiserror = "1.0.30"
# Prettier error messages
anyhow = "1.0.49"
# Command line arg parsing.
clap = "3.0.0-beta.5"
# Internet lib
reqwest = { version = "0.11.6", features = ["blocking"] }
